--- a/TODO.txt
+++ b/TODO.txt
@@ -2,27 +2,26 @@
  ┌────────────────────────────────────────────────────────────┐
  │                          TODOO list                        │
  └────────────────────────────────────────────────────────────┘
-** Pongo TODOO con dos 'O' para que no me aparezca como tarea en el proyecto **
-Creo que es mejor que directamenet usemos el soporte de issues que hay en github. He añadido varias con problemillas
-que he ido encontrando.
+** Nota: escribir TODOO con dos 'O' para que no me aparezca como tarea en el proyecto **
 
 
   Frontend
-  - Permitir sobreimponer sobre DL1 una parrilla explicativa del binarizado, por ejemplo con franjas
-  de colores alternos indicando los rangos de a,b,c,d,e, etc. y quizas tambien el tamaño de la ventana
-  - DONE: Selección de cromosomas
-  - DONE: Reloj/barra de espera para cargas y búsquedas
-  - DONE: Dejar el color interno de un punto al hacer mouseout (quitarlo solo al hacer un nuevo mousein)
-  - DONE: Estilos de la web (sobre todoo de la parte de arriba)
-  - DONE: Pantalla de login
-  - TODOO: Poner en cada cromosoma el nombre y el número de ocurrencias
-  - TODOO: Parrilla explicativa sobre DL1
-  - TODOO: Ajustar bien el "line_y0" de la dataLine2
+=============
+  - DONE:  Selección de cromosomas
+  - DONE:  Reloj/barra de espera para cargas y búsquedas
+  - DONE:  Dejar el color interno de un punto al hacer mouseout (quitarlo solo al hacer un nuevo mousein)
+  - DONE:  Estilos de la web (sobre todoo de la parte de arriba)
+  - DONE:  Pantalla de login
+  - DONE:  Poner en cada cromosoma el nombre y el número de ocurrencias
+  - DONE:  Ajustar bien el "line_y0" de la dataLine2
+  - TODOO: cambiar el idioma del componente para subir archivos
+  - TODOO: Permitir sobreimponer sobre DL1 una parrilla explicativa del binarizado, por ejemplo con franjas
+           de colores alternos indicando los rangos de a,b,c,d,e, etc. y quizas tambien el tamaño de la ventana
   - TODOO: Botón de prueba (no puede pasarse el nombre desde el cliente, fallo de seguridad. Tiene que saberse
                             ya en el servidor y que al pulsarse, devuelva la información)
 
-
   Backend
+=============
   - Intentar optimizar el cálculo de estadísticas y discretización (2.5/5s en 2M y  5/7s en 4M)
   - Intentar optimizar los tiempos de lectura y formateo (en total unos 10s para pombe entero)
         DONE: Los dos puntos anteriores están bastante optimizados. Para pombe entero estamos hablando de 10s para todoo
