--- a/TODO.txt
+++ b/TODO.txt
@@ -13,8 +13,8 @@
         lo mismo pasa con las labels y creo que con los crackers.
         No es muy grave por que no se acumulan entre selecciones.
   - TODO: un bug esquivo es que hay veces que las DL2 se entremezclan con las DL1, puede que sea sólo en modo depuración
-  - TODO: ayuda sencilla para entender las búsquedas de patrones
-        ONGOING para toda la herramienta, incluyendo el backend
+  - HECHO: ayuda sencilla para entender las búsquedas de patrones
+        De momento a través de un pdf
   - DISCARDED (BY NOW): en el caso de genes/go las longitudes de cada secuencia son distintas. Habría que hacer un
         método para buscar motivos en cadenas de longitud variable en ese caso. De momento simplemente no se dibuja la
         secuencia en estos casos
@@ -22,8 +22,21 @@
 
   - TODO: parece que en Firefox pasar por encima de una línea de DL2 no responde.
   - TODO: brackets en DL2 no concuerdan con el zoom, ojo.
-  - TODO: extraño cruce de máximo y mínimo en Hpr3
 
+  - TODO: cuando hay varias ocurrencias cerca en el chromosome level son difíciles de seleccionar
+        TODO: si son a 150 nucleótidos o menos no se distinguen directamente... -> considerarlas como una ocurrencia?
+  - SOLVED: seleccionar go terms parece que falla si tenemos dos conjuntos de datos cargados?
+        Era porque las anotaciones sólo se guardan en el primer track, y cogíamos el último
+
+  - TODO: comportamiento con 3 o más datasets...
+        Diseño: quizás mejor dejar sólo un track del chromosome level?
+
+  -TODO: ingeniería del software
+    Quizás habría que separar DL1 del Enrichment track
+    También quizás habría que separa los svgs de las DL1
+
+  TODO: búsqueda simple: eliminar el and/or/not para evitar problemas y usar el dataset que haya puesto arriba (claro)
+  TODO: ordenar alfabéticamente los términos GO?
   Backend
 =============
   - Intentar optimizar el cálculo de estadísticas y discretización (2.5/5s en 2M y  5/7s en 4M)
@@ -41,15 +54,10 @@
   - HECHO: Gestionar mejor el almacenamiento de archivos
         Facilitar la inclusion de anotaciones poniendo la carpeta adecuada
         TODO: quizás falta eliminar los wig del servidor una vez procesados.
-  - TODO: Gestión e instalación del servidor: apache tomcat
+  - HECHO: Gestión e instalación del servidor: apache tomcat
         HECHO: instalado mediante WSGI en Apache.
-
-        TODO: aún con fisher instalado, sigue dando algún error el GOenrichment() --> URI too long, parece*
-  - TODO: eliminar las anotaciones del frontend y dejarlas en el backend. Si no hay problemas en producción* --> debería estar solucionado
 
   - SOLVED: revisar el tema de las anotaciones, puede ser que no me esté cogiendo siempre bien los CDS (e.g. hrp3 en ch1 tiene 2 CDSs que no aparecen)
         Parece que requieren unas ventanas un poco más grandes, lo he puesto al doble del a anchura (~2400)
-
-
 
   - TODO: versión para consola de búsquedas sobre wig/bigwig, con creación de índices... que sea similar a como hace bowtie
