--- a/TODO.txt
+++ b/TODO.txt
@@ -40,6 +40,12 @@
   TODO: sobre todo en remoto, descoloca un montón las tracks y no las muestra en el orden puesto originalmente!
   TODO: ordenar alfabéticamente los términos GO?
 
+  HECHO: exportar posiciones en formato bed (ch start end)
+  TODO: seleccionar trozos: click+rectangulo?
+  TODO: fasta export
+  TODO: enriquecimiento 'en distancia': que se pueda especificar cercanía a genes
+  TODO: pistas wig (no procesadas) sólo para mostrar.
+
   Backend
 =============
   - Intentar optimizar el cálculo de estadísticas y discretización (2.5/5s en 2M y  5/7s en 4M)
@@ -64,3 +70,15 @@
         Parece que requieren unas ventanas un poco más grandes, lo he puesto al doble del a anchura (~2400)
 
   - TODO: versión para consola de búsquedas sobre wig/bigwig, con creación de índices... que sea similar a como hace bowtie
+
+  - TODO: añadir anotaciones para Candida albicans
+    Candida albicans WO exactamente. No tiene genes, solo ORFs (añadido para funcionar así)
+        SOLVED En GFF, algunos tracks no tienen ninguna anotación y eso no está controlado
+                Le hemos hecho el control en search del backend. De todos modos esos supercontig tan pequeños no sé si valdrán pa algo
+               En GFF, entienden el start y end al revés para antisentidos!!! --> corregido en gff() en el backend
+        SOLVED GO: Aparte de algunos errores menores, lo que pasa es que TODAS las anotaciones GO son IEA y entonces las descartamos.
+            Ponemos una opción de búsqueda para permitir usarlas, por defecto se descartan.
+            Tenemos que añadir ORF para búsqeudas por searchGO (no sólo "gene"
+            TODO: problemas al seleccionar elementos enriquecidos (no se resaltan los puntos)
+        SOLVED FASTA: tenemos sólo un archivo para el genoma en vez de uno por track. Implementado para que autodetecte si hay +1 fasta o no, y aplique uno u otro parseo
+
